# spajam2021-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  appspec.yml  buildspec.yml  docker-compose.yml  pyproject.toml  taskdef.json
app/: healthcheck.html  main.py
app/api/routes/: api.py  example.py  files.py
app/core/: config.py
app/dependencies/: aws.py  database.py  rekognition.py
app/models/: main.py  users.py
app/schemas/: users.py
